@@ -94,8 +94,15 @@
      ```java
         public class ReferenceTest {
             public static void main(String[] args) {
+                //强引用
                 Object object = new Object();
-                SoftReference<Object> ref = new SoftReference<>(object);
+                //软引用，内存足够时不回收，不够时回收
+        //        SoftReference<Object> ref = new SoftReference<>(object);
+                //弱引用，不管内存是否足够都回收
+        //        WeakReference<Object> ref = new WeakReference<>(object);
+                //虚引用，几乎相当于没引用，主要用于跟踪GC状态
+                ReferenceQueue<Object> queue = new ReferenceQueue<>();
+                PhantomReference<Object> ref = new PhantomReference<>(object, queue);
                 System.out.println(object);
                 System.out.println(ref);
                 System.out.println(ref.get());
@@ -105,6 +112,8 @@
                 System.out.println(object);
                 System.out.println(ref.get());
                 System.out.println(ref);
+                System.out.println(ref.isEnqueued());
+                System.out.println(queue.poll());
             }
         }
      ```
@@ -125,6 +134,118 @@
      > - 方法区中类静态属性引用的对象
      > - 方法区中常量引用的对象
      > - 本地方法栈中引用的对象
-    
+### 4.2 GC收集算法                   
+  > - **标记-清除算法（Mark-Sweep）**   
+  > 判断哪些数据需要清除，并对其进行标记，然后清除被标记的数据   
+  > *缺点*：会产生大量不连续的内存碎片，碎片太多可能导致以后要分配较大对象时，无法找到足够的连续内存而不得不提前触发GC
+  > - **复制算法（Copying, 操作存活对象）**  
+  > 将可用内存按容量分为大小相等的两块，每次只使用其中一块，当一块内存用完需要GC时，
+  > 就将存活对象复制到另一块上面，然后将第一块内存全部清除。这样做不会有碎片问题，但浪费了空间，适用于存活率非常低的情况。
+  > - **标记-整理算法（Mark-Compact, 操作清理对象）**   
+  > 将废弃对象做上标记，然后将未标记对象移到一边，最后清空另一边区域即可。
+  > 这样就不用浪费内存空间，也避免了碎片化问题，适用于存活率较高的情况。
+  > - **分代收集算法（Generational Collection, HotSpot虚拟机GC采用这种）**  
+  > 根据对象存活周期的不同，将内存划分为几块。参照2.2.2堆结构。    
+  > 堆中的新生代采用复制算法，老年代采用标记-整理算法。  
+  > 默认新生代：老年代=1：2 新生代Eden:Survivor0:Survivor1=8:1:1 
+  >     1. 对象通常分配在Eden区，大对象（需要大量内存的Java对象，如长字符串或数组）直接进入老年代 
+  >     2. 当Eden区满后，会触发Minor GC,回收新生代，非常频繁，回收速度也较快
+  >     3. 当老年代满后，则触发Full GC, 经常会伴随至少一次Minor GC,但并非绝对，Full GC速度一般会比Minor GC慢10倍以上
+### 4.3 HotSpot GC 收集器
+![jvm-gc](./image/jvm-gc.png)
+*有连线的表示可搭配使用*
+> - **Serial(串行)**  
+> 1.3.1之前是新生代GC唯一选择 
+> 针对新生代，采用复制算法，单线程串行（即，"stop the world"）,简单高效，但数据量大时则影响响应   
+> "-XX:+UseSerialGC"
+> - **ParNew**  
+> Serial的多线程版本  
+> Server模式下重要的收集器，因为除Serial外，它是唯一可与CMS配合的收集器    
+> "-XX:+UseConcMarkSweepGC" 指定CMS后，年轻代默认使用ParNew    
+> "-XX:+UseParNewGC"    
+> "-XX:ParallelGCThreads=" 指定线程数量，默认与CPU相同
+> - **Parallel Scavenge(吞吐量)**  
+> 与吞吐量关系密切，目标是达到可控的吞吐量
+> 与ParNew类似，新生代、复制算法、多线程    
+> "-XX:MaxGCPauseMills=" 最大垃圾收集时间    
+> "-XX:GCTimeRatio=" 垃圾收集时间占总时间比率，计算公式是1/(1+n),比如设置19是5%，默认是99即1%   
+> "-XX:+UseAdaptiveSizePolicy" GC自适应调节策略，开启这个就不用手工指定一些细节参数，如-Xmn等， 
+    JVM会根据运行情况动态调整已达到最合适的停顿时间和最大吞吐量
+> - **Serial Old**  
+> Serial的老年代版本，针对老年代
+> 采用Mark-Compact算法，单线程，主要用于Client模式
+> - **Parallel Old**
+> Parallel Scavenge的老年代版本   
+> 针对老年代，标记-整理算法，多线程，适用于高吞吐量和CPU敏感场景  
+> "-XX:+UseParallelOldGC"
+> - **CMS(Concurrent Mark Sweep GC)**   
+> 并发标记清理，也称为并发低停顿(Concurrent Low Pause Collector)或低延迟收集器(Low Latency)   
+> 针对老年代，标记-清理算法（会产生内存碎片），并发收集低停顿    
+> 目标是获取最短停顿时间   
+> 需要更大内存    
+> "-XX:+UseConcMarkSweepGC" 
+> 对CPU敏感，可能导致程序变慢，吞吐量变低，默认线程数是（CPU数+3)/4    
+> 无法处理浮动垃圾，可能出现Concurrent Mode Failure失败
+> 产生内存碎片
+>   * "-XX:+UseCMSCompactAtFullGCCollection"    开启内存合并整理，但无法并发，停顿时间会变长，默认开启但不会进行因为下一个参数默认为0
+>   * "-XX:+CMSFullGCsBeforeCompaction" 多少次Full GC之后来一次压缩整理，默认为0
+> - **i-CMS(Incremental CMS)**  
+> 增量并发收集器，为解决CMS吞吐量的问题，但效果不理想，1.6之后官方已不提倡使用
+> - **G1(Garbage-First)**   
+> JDK7-u4提供的商用收集器   
+> 集各种收集器的优劣，统一管理堆内存，暂时不做深入研究
 ## 5 JVM 调优
+### 5.1 常见参数
+> 1. 堆
+>   * -Xms4096m 初始堆大小4g
+>   * -Xmx4096m 最大堆大小4g
+>   * -Xmn1536m 年轻代大小1.5g，年轻代大小，官方推荐堆的3/8
+>   * -XX:NewSize= 年轻代大小（1.3/1.4）
+>   * -XX:MaxNewSize 年轻代最大值（1.3/1.4）
+>   * -Xss512k 设置每个线程占用的堆栈大小，5.0后默认为1M
+>   * -XX:NewRatio=3 年轻代与年老代比值，设置为3则为1：3，年轻代占1/4
+>   * -XX:PermSize 永久代大小
+>   * -XX:MaxPermSize 永久代最大值
+>   * -XX:SurvivorRatio=4 Eden与Survivor的比值，设置为4，则为2：4，一个Survivor占1/6
+>   * -XX:MaxTenuringThreshold=0 垃圾最大年龄，如果设置为0则年轻代不经过Survivor直接进入老年代,设置较大值则使对象在年轻代存活更久
+> 2. 内存溢出
+>   * -XX:+HeapDumpOnOutOfMemoryErr 内存溢出时生成dump文件
+>   * -XX:HeapDumpPath=${目录} 生成dump文件的路径，也可指定文件名
+> 3. 垃圾回收
+>   * 收集器配置参照4.3
+>   * -XX:+PrintGC 打印GC
+>   * -XX:+PrintGCDetails   打印GC细节
+>   * -XX:+PrintGCTimeStamps 打印GC时间戳
+>   * -XX:+PrintHeapAtGC 打印GC前后堆栈信息  
+>   * -Xloggc:${文件名} 与上面配合打印到文件
+### 5.2 调优目标
+> 1. 何时需要调优
+>   * heap内存持续上涨达到设置的最大值，甚至出现OOM
+>   * Full GC次数频繁
+>   * GC停顿时间过长（超过1s）
+>   * 大量占用本地内存空间
+>   * 吞吐量与响应性能不高或下降
+> 2. 调优原则
+>   * 多数Java应用不需要在服务器上进行JVM优化
+>   * 多数导致GC问题的Java应用，不是因为参数设置问题，而是代码本身问题
+>   * 上线之前，先考虑将机器的JVM参数设置到最优
+>   * 减少创建对象的数量
+>   * 减少使用全局变量或大对象
+>   * JVM优化是到最后不得已才采用的手段
+>   * 实际情况大多是分析GC情况优化代码而非优化JVM参数
+> 3. 调优目标
+>   * GC低停顿
+>   * GC低频率
+>   * 低内存占用
+>   * 高吞吐量
+>   * 不同应用，因地制宜
+### 5.3 调优步骤
+>   * 分析GC日志及Dump文件，或借助其他工具（如GCViwer和MAT等），
+      判断是否需要优化，确定瓶颈问题点
+>   * 确定调优目标
+>   * 确定调优参数
+>   * 调优一台服务器，对比调优前后的差异
+>   * 不断分析调整，直到参数值合适
+>   * 配置合适参数并跟踪观察
+
   
